# uhidpp

./: Cargo.toml  README.md
hiddev/: Cargo.toml
hiddev/src/: collection.rs  field.rs  lib.rs  report.rs
hiddev_sys/: Cargo.toml
hiddev_sys/src/: field.rs  lib.rs  lib_test.rs
src/: device.rs  error.rs  lib.rs  report.rs  usb.rs  wait.rs
src/context/: mod.rs
src/features/: common.rs  devicetypename.rs  illuminationlight.rs  mod.rs  root.rs  root_test.rs
src/hid/: hiddev.rs  hiddev_test.rs  mod.rs
src/io/: mod.rs  receiver.rs  reportcollector.rs  sender.rs
