[package]
name = "hiddev-sys"
description = "Lowlevel bindings for hiddev devices"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
nix = "0.26.2"
num_enum = "0.5.9"
